--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,7 @@
 
+* {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400; /* Peso predeterminado */
+    font-style: normal;
+  }
