--- a/frontend/src/precentacion/styles/FormularioPublicarMaterial.css
+++ b/frontend/src/precentacion/styles/FormularioPublicarMaterial.css
@@ -1,53 +1,93 @@
+img,
+p,
+.Botones,
+.Encabezado {
+  background: #fff;
+}
 
+h1 {
+  background-color: #fff;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 32;
+}
 
-h1, img,h2,p, .Botones, .Encabezado{
-    background: #fff;
+h2 {
+  background-color: #fff;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 22;
+}
+
+.Botones {
+  display: flex;
+  gap: 20px; /* Espacio entre los botones */
+  justify-content: center; /* Centrar los botones */
+}
+
+button {
+  background-color: #4caf50; /* Color verde de fondo */
+  color: white; /* Color de texto */
+  border: none; /* Sin bordes */
+  padding: 15px 32px; /* Tamaño del botón */
+  text-align: center; /* Centrar texto */
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px; /* Tamaño del texto */
+  border-radius: 10px; /* Bordes redondeados */
+  cursor: pointer; /* Cambia el cursor cuando está sobre el botón */
+}
+
+button:hover {
+  background-color: #45a049; /* Efecto al pasar el ratón */
 }
 
 hr {
-    border: none; 
-    height: 2px;  
-    background-color: #4D8D31;
-    margin: 20px 0;
+  border: none;
+  height: 2px;
+  background-color: #4d8d31;
+  margin: 20px 0;
 }
 
-.Titulo-Usuario{
-    background-color: #fff;
-    display: flex;
+.Titulo-Usuario {
+  background-color: #fff;
+  display: flex;
 }
-
 
 .FormularioBad {
-    background-color: #fff;
-    padding: 25px 27.5px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    text-align: center;
+  background-color: #fff;
+  padding: 25px 27.5px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
-.Form{
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
+.Form {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
 }
 
-label{
-    background-color: #fff;
-    color: #283629;
-    font-size: 15px;
-    font-weight: 600;
-    margin-bottom: 15px;
+label {
+  background-color: #fff;
+  color: #4D4D4D;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 15;
+  margin-bottom: 15px;
 }
 
-input, textarea{
-    padding: 17px 25px;
-    margin-bottom: 20px;
-    background-color: #fff;
-    border: 2px solid #4D8D31;
-    color: #283629;
-    outline: none;
+input,
+textarea {
+  padding: 17px 25px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  border: 2px solid #4d8d31;
+  color: #283629;
+  outline: none;
 }
 
-input::placeholder, textarea::placeholder{
-    color: #b5cab6;
+input::placeholder,
+textarea::placeholder {
+  color: #b5cab6;
 }
