--- a/frontend/src/presentacion/styles/Registro.css
+++ b/frontend/src/presentacion/styles/Registro.css
@@ -1,10 +1,33 @@
 .registro {
     display: flex;
-    height: 100vh;
+    height: 90vh;
     font-family: 'Inter', sans-serif;
   }
+
+  .container_logo{
+    position: absolute;
+    margin-left: 50px;
+    margin-top: 20px;
+    display:flex; 
+    flex-direction: column;  
+  }
+  
+  .horizontal-text {
+    padding: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 10px; /* Espacio entre las dos palabras */
+  }
+  
+  .vertical-text {
+    font-size: 20px;
+    font-weight: bold;
+    writing-mode: vertical-rl; /* Hace que el texto se alinee verticalmente */
+    transform: rotate(180deg); /* Ajusta la orientación del texto */
+  }
+  
+
   .formulario {
-    
     margin-top: 50px;
     align-items: center;
     width: 58%;
@@ -12,9 +35,11 @@
     padding: 40px;
     display: flex;
     flex-direction: column;
+ 
   }
   .cambio-login {
     width: 42%;
+    height: 100%;
     background-color: #4D8D31;
     padding: 40px;
     display: flex;
@@ -23,15 +48,17 @@
     align-items: center;
     text-align: center;
   }
+
   h1{
-    color: rgb(0, 0, 0);
-    font-size: 45px;
+    color: #4D8D31;
+    font-size: 40px;
     font-weight: 550;
     margin-bottom: 30px;
   }
-   h2 {
+   
+  h2 {
     color: #fff;
-    font-size: 45px;
+    font-size: 40px;
     font-weight: 550;
     margin-bottom: 30px;
   }
@@ -59,13 +86,26 @@
     margin-bottom: 20px;
   }
   .inputs {
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
     gap: 15px;
+    width: 50%;
+    margin-bottom: 20px;
+    margin-top: 8px;
   }
 
+.input{
+  font-size: 18px;
+  text-align: center;
+  border: none;
+  border-bottom: 2px solid black;
+  background: transparent;
+  outline: none;
+}
+
   input, select {
-    color: black;
+    text-align: center;
     padding: 15px;
     background-color: rgba(0, 0, 0, 0.1);
     border: none;
@@ -91,9 +131,15 @@
   }
 
   select {
+    font-size: 18px;
     appearance: none;
+    border: none;
+    border-bottom: 2px solid black;
+    background: transparent;
+    outline: none;
     width: 100%;
   }
+
   button {
     margin-top: 30px;
     padding: 15px 30px;
@@ -102,24 +148,38 @@
     font-weight: bold;
     cursor: pointer;
   }
+
   .continuar {
+    width: 200px;
     align-self: center;
     background-color: #4D8D31;
     color: white;
+    border-radius: 9px;
   }
 
 .continuar:hover{
-
+  background-color: #fff;
+  color: #4D8D31;
+  outline: 2px solid #4D8D31;
 }
 
-
-  .cambio-login p {
+.cambio-login p {
+    width: 80%;
     color: white;
-    font-size: 15px;
-    margin-bottom: 30px;
-  }
-  .iniciar-sesion {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.iniciar-sesion {
+    width: 200px;
     background-color: white;
     color: #4D8D31;
-  }
+    border-radius: 9px;
+}
   
+.iniciar-sesion:hover {
+  background-color: #4D8D31;
+  color: #fff;
+  border-radius: 9px;
+  outline: 2px solid #fff;
+}
