El botón para buscar "funciona"

--- a/frontend/src/styles/VisualizarMaterial.css
+++ b/frontend/src/styles/VisualizarMaterial.css
@@ -47,6 +47,11 @@
     display: flex;
 }
 
+.marginado-filtros {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
+
 .contenedor-cantidades {
     display: flex;
 }
