--- a/frontend/src/styles/publicacionContenido.css
+++ b/frontend/src/styles/publicacionContenido.css
@@ -35,7 +35,10 @@
     flex: 2; /* Ocupa dos tercios del ancho */
     background-color: white; /* Color de fondo blanco */
     margin-right: 25px; /* Espacio a la derecha */
-    padding: 10px; /* Espaciado interno */
+    padding: 0;
+    display: block;
+     /* Espaciado interno */
+    
 }
 
 .extras {
@@ -43,3 +46,55 @@
     background-color: #f5f8fa; /* Color de fondo claro */
     padding: 10px; /* Espaciado interno */
 }
+
+.addPublicacion{
+    justify-content: center;
+    padding: 0;
+    margin-left: 30px;
+    width: 60px;
+    background-color: #4D8D31;
+    border-radius: 9px;
+    color: #fff;
+}
+
+.addPublicacion:hover{
+    outline: 2px solid #4D8D31;
+    background-color: #fff;
+    color: #4D8D31;
+}
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Fondo oscuro tras el popup */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-inner {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    max-width: 90%;
+  }
+  
+  .popup-inner h2 {
+    margin-bottom: 15px;
+  }
+  
+  .popup-inner textarea {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 15px;
+  }
+  
+  .popup-actions {
+    display: flex;
+    justify-content: space-between;
+  }
