--- a/frontend/src/styles/detalleMatConst.css
+++ b/frontend/src/styles/detalleMatConst.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-.container-popup{ 
-  display: inline;  
+
+.elPopUp{
   background-color: #fff;
 }
 
 .material{
+  display: inline;
+  border-bottom: 3px solid #000;  
+  background-color: #fff; 
   width: 200px;
   height: 550px;
-  border: 3px solid #000;
   position: relative;
 }
 
@@ -23,11 +25,11 @@ img{
 .btn-detalle-material{
   place-items: center;
 }
-h1 {
+.h1tit {
   color: #874328;
   text-align: center;
 }
-p{
+.cantp, .statusp, .descriptionp{
   font-size: 24px;
   font-weight: 100;
   text-align: center;
