--- a/frontend/src/styles/VisualizarMaterial.css
+++ b/frontend/src/styles/VisualizarMaterial.css
@@ -7,6 +7,25 @@
     top: 0;
 }
 
+.titulo-material{
+  color: #874328;
+  font-size: 50px;
+}
+
+.botondelPopUp{
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 20px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
 .contenedor-vista-previa {
     display: flex;
 }
