arreglo header, arreglo teo's part, css

--- a/frontend/src/styles/VisualizarMaterial.css
+++ b/frontend/src/styles/VisualizarMaterial.css
@@ -1,4 +1,4 @@
-.contenedor-visualizacion {
+/* .contenedor-visualizacion {
     display: flex;
     min-height: auto;
     background-color: white;
@@ -152,4 +152,4 @@
     margin-left: 7vmax;
     background-color: #EF4444;
     color: white;
-}
+} */
