--- a/frontend/src/styles/detalleMatConst.css
+++ b/frontend/src/styles/detalleMatConst.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-.container-popup{ 
+/* .container-popup{ 
   display: inline;  
   background-color: #fff;
 }
@@ -44,4 +43,4 @@ p{
   margin-top: 20px;
   cursor: pointer;
   border-radius: 4px;
-}
+} */
