--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -1,23 +1,21 @@
-/* Estilos para el Encabezado */
 .Encabezado {
-  background-color: #fff; /* Fondo del encabezado */
-  padding: 20px; /* Espaciado interno */
-  box-shadow: 0px 10px 10px #b1b1b1; /* Sombra del encabezado */
-  width: 100%; /* Asegurar que cubra todo el ancho */
+  background-color: #fff; 
+  padding: 20px; 
+  box-shadow: 0px 10px 10px #b1b1b1; 
+  width: 100%; 
   margin: -20px;
   font-family: 'Inter', sans-serif;
   position: relative;
-  height: 90px;
+  height: 60px;
+  font-family: "Inter", sans-serif;
 }
 
-/* Estilos para la navegación */
 .Header {
-  display: flex; /* Usar flexbox para alinear los elementos */
-  justify-content: flex-start; /* Alinear a la izquierda */
-  align-items: center; /* Centrar verticalmente */
+  display: flex;
+  justify-content: flex-start; 
+  align-items: center;
 }
 
-/* Estilos para la lista de navegación */
 .navegador {
   list-style-type: none; /* Quitar las viñetas de la lista */
   padding: 0; /* Sin padding */
@@ -26,11 +24,11 @@
   width: 100%;
 }
 
-/* Estilos para los elementos de la lista */
 .elemento {
   font-size: 18px; /* Tamaño de fuente */
   margin: 0 20px; /* Espaciado entre los elementos */
   width: 150px; /* Ancho fijo */
+  height: 60px;
   color: #000000; /* Color del texto */
   text-decoration: none; /* Sin subrayado en el texto */
   transition: color 0.3s; /* Transición suave para el color */
@@ -40,16 +38,16 @@
   justify-content: center; /* Centrar horizontalmente el texto */
 }
 
-/* Estilo para el elemento seleccionado */
 .elementoSel {
   text-decoration: none;
-  font-size: 18px; /* Tamaño de fuente */
-  margin: 0 20px; /* Espaciado entre los elementos */
-  width: 150px; /* Ancho fijo */
-  color: #4D8D31; /* Cambiar el color del texto seleccionado */
-  display: flex; /* Usar flexbox en los elementos */
-  align-items: center; /* Centrar verticalmente el texto */
-  justify-content: center; /* Centrar horizontalmente el texto */
+  font-size: 18px; 
+  margin: 0 20px; 
+  width: 150px; 
+  color: #4D8D31;
+  display: flex; 
+  align-items: center;
+  justify-content: center; 
+  border-bottom: #4D8B31 solid;
 }
 
 /* Efecto de hover para los elementos */
@@ -67,3 +65,4 @@
 .elemento a:hover {
   text-decoration: none; /* Sin subrayado al pasar el mouse */
 }
+
