--- a/frontend/src/styles/detalleMatConst.module.css
+++ b/frontend/src/styles/detalleMatConst.module.css
@@ -1,11 +1,7 @@
-<<<<<<< HEAD
 /* .container-popup{ 
   display: inline;  
-=======
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
+}
 .elPopUp{
->>>>>>> 6596c2a84fb08f6a7973077d48cdedb0ada1d65e
   background-color: #fff;
 }
 
