--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -123,3 +123,19 @@ outline: 2px solid #874328;
   color: #874328;
   text-decoration: underline;
 }
+
+.CambioRol{
+  font-size: 18px;
+  position: absolute;
+  background-color: #fff;
+  margin-right: 50px;
+  margin-top: 30px;
+  color: #874328;
+  right: 0;
+  text-decoration: underline;
+}
+
+.CambioRol:hover{
+  text-decoration: none;
+  font-weight: 500;
+}
