--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -1,7 +1,7 @@
 .Encabezado {
   background-color: #fff; 
   padding: 20px; 
-  box-shadow: 0px 10px 10px #b1b1b1; 
+  box-shadow: 0px 10px 10px #4e8b3165; 
   width: 100%; 
   margin: -20px;
   font-family: 'Inter', sans-serif;
